<?xml version="1.0" encoding="utf-8"?>
<!-- 待实现的属性，popmenu softinputmode pan -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/lineraLayoutPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/btPrintEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printenglishstring" />

        <Button
            android:id="@+id/btPrintChinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printchinesestring" />

        <Button
            android:id="@+id/btPrintEwen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printrussianstring" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lineraLayoutPrint"
        android:layout_alignRight="@+id/lineraLayoutPrint"
        android:layout_below="@+id/lineraLayoutPrint"
        android:layout_marginTop="20dp"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fontsize"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btFontSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/fontsize_standard" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text="@string/textalign"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btTextAlign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/textalign_left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text="@string/scaletimes"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btScaleTimesWidth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/scaletimes_width_0" />

                    <Button
                        android:id="@+id/btScaleTimesHeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/scaletimes_height_0" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/cbBlackWhiteReverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/blackwhitereverse" />

                    <CheckBox
                        android:id="@+id/cbBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/cbUpsideDown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/upsidedownprint" />

                    <CheckBox
                        android:id="@+id/cbTurnRight90"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/turnright90" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/cbUnderLine1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/underline1" />

                    <CheckBox
                        android:id="@+id/cbUnderLine2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/underline2" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvLineHeight"
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text="@string/lineheight"
                    android:textSize="15sp" />

                <SeekBar
                    android:id="@+id/sbLineHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvRightSpace"
                    android:layout_width="61sp"
                    android:layout_height="wrap_content"
                    android:text="@string/rightspace"
                    android:textSize="15sp" />

                <SeekBar
                    android:id="@+id/sbRightSpace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>