<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <Button
        android:id="@+id/buttonFullCut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="left|center"
        android:paddingLeft="70dp"
        android:text="@string/fullcut" />

    <Button
        android:id="@+id/buttonHalfCut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonFullCut"
        android:layout_marginTop="20dp"
        android:gravity="left|center"
        android:paddingLeft="70dp"
        android:text="@string/halfcut" />

    <Button
        android:id="@+id/buttonFeedAndCut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonHalfCut"
        android:layout_marginTop="20dp"
        android:gravity="left|center"
        android:paddingLeft="70dp"
        android:text="@string/feedandcut" />
</RelativeLayout>